Increase JVM memory for Dockerfile.